bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:4: error: ';' expected but ')' found.
 else { return(((n-100)<=10) || (200-n)<= 10))} 
                                             ^